--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,11 @@
 *.zip
 *.tar.gz
 *.rar
+pom.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 LyApi.iml
 .idea
 target/nexus-staging/deferred
+
