--- a/lyapi-spigot/pom.xml
+++ b/lyapi-spigot/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <artifactId>LyApi</artifactId>
         <groupId>net.lymarket.lyapi</groupId>
-        <version>1.2.5</version>
+        <version>1.2.6</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>lyapi-spigot</artifactId>
@@ -139,6 +139,11 @@
         <dependency>
             <groupId>net.lymarket.lyapi</groupId>
             <artifactId>versionsupport_v1_18_R2</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.lymarket.lyapi</groupId>
+            <artifactId>versionsupport_v1_19_R1</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
