--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <groupId>net.lymarket.lyapi</groupId>
     <artifactId>LyApi</artifactId>
     <packaging>pom</packaging>
-    <version>1.2.5</version>
+    <version>1.2.6</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -180,6 +180,7 @@
         <module>versionsupport_v1_17_R1</module>
         <module>versionsupport_v1_18_R1</module>
         <module>versionsupport_v1_18_R2</module>
+        <module>versionsupport_v1_19_R1</module>
     </modules>
 
     <distributionManagement>
