--- a/lyapi-spigot/pom.xml
+++ b/lyapi-spigot/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <artifactId>LyApi</artifactId>
         <groupId>net.lymarket.lyapi</groupId>
-        <version>1.2.6</version>
+        <version>1.2.9</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>lyapi-spigot</artifactId>
@@ -171,12 +171,7 @@
                     <artifactId>particles</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>xyz.xenondevs</groupId>
-            <artifactId>particle</artifactId>
-            <version>1.7.1</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
