--- a/lyapi-spigot/pom.xml
+++ b/lyapi-spigot/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <artifactId>LyApi</artifactId>
         <groupId>net.lymarket.lyapi</groupId>
-        <version>1.2.10</version>
+        <version>1.2.12</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>lyapi-spigot</artifactId>
@@ -76,7 +76,7 @@
             <artifactId>versionsupport_1_8_R3</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>net.lymarket.lyapi</groupId>
             <artifactId>versionsupport_1_9_R2</artifactId>
             <version>${project.version}</version>
@@ -145,7 +145,7 @@
             <groupId>net.lymarket.lyapi</groupId>
             <artifactId>versionsupport_v1_19_R1</artifactId>
             <version>${project.version}</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
