--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <groupId>net.lymarket.lyapi</groupId>
     <artifactId>LyApi</artifactId>
     <packaging>pom</packaging>
-    <version>1.2.10</version>
+    <version>1.2.12</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -164,10 +164,10 @@
     <modules>
         <module>common</module>
         <module>lyapi-spigot</module>
-        <module>lyapi-velocity</module>
-        <module>lyapi-bungee</module>
+        <!--<module>lyapi-velocity</module>
+        <module>lyapi-bungee</module>-->
         <module>versionsupport_1_8_R3</module>
-        <module>versionsupport_1_9_R2</module>
+        <!--<module>versionsupport_1_9_R2</module>
         <module>versionsupport_1_10_R1</module>
         <module>versionsupport_1_11_R1</module>
         <module>versionsupport_1_12_R1</module>
@@ -180,7 +180,7 @@
         <module>versionsupport_v1_17_R1</module>
         <module>versionsupport_v1_18_R1</module>
         <module>versionsupport_v1_18_R2</module>
-        <module>versionsupport_v1_19_R1</module>
+        <module>versionsupport_v1_19_R1</module>-->
     </modules>
 
     <distributionManagement>
