--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <groupId>net.lymarket.lyapi</groupId>
     <artifactId>LyApi</artifactId>
     <packaging>pom</packaging>
-    <version>1.2.12</version>
+    <version>1.2.13</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -81,8 +81,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>16</source>
+                    <target>16</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -164,10 +164,10 @@
     <modules>
         <module>common</module>
         <module>lyapi-spigot</module>
-        <!--<module>lyapi-velocity</module>
-        <module>lyapi-bungee</module>-->
+        <module>lyapi-velocity</module>
+        <module>lyapi-bungee</module>
         <module>versionsupport_1_8_R3</module>
-        <!--<module>versionsupport_1_9_R2</module>
+        <module>versionsupport_1_9_R2</module>
         <module>versionsupport_1_10_R1</module>
         <module>versionsupport_1_11_R1</module>
         <module>versionsupport_1_12_R1</module>
@@ -180,7 +180,7 @@
         <module>versionsupport_v1_17_R1</module>
         <module>versionsupport_v1_18_R1</module>
         <module>versionsupport_v1_18_R2</module>
-        <module>versionsupport_v1_19_R1</module>-->
+        <module>versionsupport_v1_19_R1</module>
     </modules>
 
     <distributionManagement>
