Changelog: + Testing a new way to reload Configs.
(cherry picked from commit 15575ee508052114006eab05a9cdd9f4f02661a5)

--- a/lyapi-spigot/pom.xml
+++ b/lyapi-spigot/pom.xml
@@ -89,6 +89,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
+        </dependency>
 
         <dependency>
             <groupId>com.github.cryptomorin</groupId>
