Changelog: + Testing a new way to reload Configs.

--- a/lyapi-spigot/pom.xml
+++ b/lyapi-spigot/pom.xml
@@ -122,6 +122,12 @@
             <version>2.9.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
