--- a/versionsupport_v1_16_R3/pom.xml
+++ b/versionsupport_v1_16_R3/pom.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ BSD 3-Clause License
-  ~
-  ~ Copyright (c) 2022, LyMarket
+  ~ Copyright (c) 2022. BSD 3-Clause License, BarraR3port.
   ~ All rights reserved.
   ~
   ~ Redistribution and use in source and binary forms, with or without
   ~ modification, are permitted provided that the following conditions are met:
-  ~ https://github.com/Lydark-Studio/LyApi/blob/master/LICENSE
+  ~ https://github.com/BarraR3port/LyApi/blob/master/LICENSE
   ~
-  ~ Contact: contact@lymarket.net
+  ~ Contact: barrar3port@gmail.com
   -->
 
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
