--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,8 @@
         <module>versionsupport_v1_19_R1</module>
         <module>versionsupport_v1_19_R2</module>
         <module>versionsupport_v1_19_R3</module>
+        <module>versionsupport_v1_20_R1</module>
+        <module>versionsupport_v1_20_R2</module>
     </modules>
 
     <distributionManagement>
